# IndoorGML_OSM

./: 313_4F_2D.gml  CMakeLists.txt  CONVERTER.cpp  IndoorGML2OSM.cpp  IndoorGML2OSM.xml  Indoorgml2OSM.cpp  OSM2IndoorGML.cpp  OSM2IndoorGML.xml  OSM2Indoorgml.cpp  README.md  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_o_n_v_e_r_t_e_r_8cpp.html  _c_o_n_v_e_r_t_e_r_8cpp.js  _c_o_n_v_e_r_t_e_r_8cpp__incl.map  _c_o_n_v_e_r_t_e_r_8cpp__incl.md5  _c_o_n_v_e_r_t_e_r_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  _c_o_n_v_e_r_t_e_r_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  _c_o_n_v_e_r_t_e_r_8cpp_source.html  _i_o_8cpp.html  _i_o_8cpp.js  _i_o_8cpp__incl.map  _i_o_8cpp__incl.md5  _i_o_8cpp_source.html  _i_o_8h.html  _i_o_8h.js  _i_o_8h__dep__incl.map  _i_o_8h__dep__incl.md5  _i_o_8h_source.html  _indoor_g_m_l___reader_8cpp.html  _indoor_g_m_l___reader_8cpp.js  _indoor_g_m_l___reader_8cpp__incl.map  _indoor_g_m_l___reader_8cpp__incl.md5  _indoor_g_m_l___reader_8cpp_source.html  _indoor_g_m_l___reader_8h.html  _indoor_g_m_l___reader_8h.js  _indoor_g_m_l___reader_8h__dep__incl.map  _indoor_g_m_l___reader_8h__dep__incl.md5  (+491 more)
DOC/: mainpage.h
IO/: IO.cpp  IO.h
IndoorGML_Reader/: IndoorGML_Reader.cpp  IndoorGML_Reader.h
IndoorGML_Writer/: IndoorGML_Writer.cpp  IndoorGML_Writer.h
OSM_Reader/: OSM_Reader.cpp  OSM_Reader.h
OSM_Writer/: OSM_Writer.cpp  OSM_Writer.h
Rapidxml/: rapidxml_print.hpp
TRANSFORM/: Transform.h
search/: all_0.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enumvalues_0.js  files_0.js  files_1.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+35 more)
